--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "Chris_2024_Website",
   "main": "index.js",
+  "homepage": "https//cuomomusic.github.io/ChrisCuomoWebsite_2024",
+  
   "scripts": {
-    "sass": "node-sass -w dist/scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w dist/scss/ -o dist/css/ --recursive",
+    
+    "deploy": "gh-pages -d dist"
   },
   "author": "Chris Cuomo",
   "license": "MIT",
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "node-sass": "^9.0.0"
   }
 }
