--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "sass": "node-sass -w dist/scss/ -o dist/css/ --recursive",
     
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d ChrisCuomoWebsite_2024"
   },
   "author": "Chris Cuomo",
   "license": "MIT",
